--- a/themes/exchanges/scss/Imports/_side-nav.scss
+++ b/themes/exchanges/scss/Imports/_side-nav.scss
@@ -224,7 +224,7 @@ ul.off-canvas-list
 		padding: 10px;
 		&:hover {
 			h1,h2,h3,h4 {
-				color: $primary-color;
+				//color: $primary-color;
 				}
 			background-color: white;
 		}
